--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "homepage": "https://github.com/NFulkerson/fruittracker",
   "dependencies": {
     "express": "~4.6.1",
+    "grunt": "~0.4.5",
+    "grunt-concurrent": "^0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-express-server": "^0.4.17",
+    "grunt-node-inspector": "^0.1.5",
+    "load-grunt-config": "~0.12.0",
     "lodash": "~2.4.1"
   }
 }
